second last commit

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,11 @@ a.active hr{
     display:block;
 }
 
-/*::-webkit-scrollbar{
+/*
+::-webkit-scrollbar{
     display: none;
-}*/
+}
+*/
 
 @media (max-width:640px){
     a.active{
